# kiosk-client

./: README.md
kiosk_flask/: app.py
kiosk_flask/templates/: asking_device.html  flask_confirmed_paiment.html  index.html  recived.html
tibillet_kiosk/: .gitignore  manage.py  pyproject.toml
tibillet_kiosk/kiosk_core/: apps.py  models.py  serializers.py  urls.py  views.py
tibillet_kiosk/kiosk_core/migrations/: 0001_initial.py  0002_paiment_choice.py
tibillet_kiosk/tibillet_kiosk/: asgi.py  settings.py  urls.py  wsgi.py
