[tool.poetry]
name = "tibillet-kiosk"
version = "0.1.0"
description = "Django app to adapt a fefilled cashless app to kiosk raspberry pi"
authors = ["glen <glen84_dr@hotmail.com>"]
license = "AGPLv3"
readme = "README.md"
packages = [{include = "tibillet_kiosk"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "4.2"
django-solo = "2.1.0"
django-browser-reload = "1.11.0"
djangorestframework = "3.14.0"
requests = "^2.31.0"
cryptography = "^41.0.4"
stripe = "^8.2.0"
django-filter = "23.2"
ipdb = "0.13.13"
django-stdimage = "6.0.1"
django-htmx = "1.16.0"
python-dotenv = "^1.0.1"
django-extensions = "^3.2.3"
markdown = "^3.6"
django-cors-headers = "^4.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
